# debugchrome-cdp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LAST_RELEASE  README.md  build.rs
.github/workflows/: release-plz.yml
debugchrome-cef/: Cargo.toml  run_report.md
debugchrome-cef/src/: cef_browser.rs  main.rs
resources/: Info.plist
src/: cef_browser.rs  gui.rs  jokes.rs  main.rs
static/: initial_payload.html
support/: release.ps1
test-scripts/: stress-test01.py
test-url-files/: test_activate_id.url  test_basic.url  test_centered_open_close.url  test_centered_open_timeout.url  test_with_id_move_screencap.url
