[package]
name = "debugchrome"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
cdp-rs = "0.3.3"
dirs = "6.0.0"
futures-util = "0.3.31"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
winapi = { version = "0.3.9", features = ["winuser"] }
